--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.devtools.restart.enabled=true
 
 spring.devtools.restart.additional-paths= src/main/java
+
+jedis.host =127.0.0.1
+jedis.port =6379
